force-app/main/default/objects/Society__c/Society__c.object-meta.xml
<CustomObject>
    <label>Society</label>
    <nameField>
        <label>Society Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Societies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>