force-app/main/default/objects/Society__c/fields/contact_pid__c.field-meta.xml
<CustomField>
    <fullName>contact_pid__c</fullName>
    <label>contact_pid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>