force-app/main/default/objects/Society__c/fields/Count_Institutional_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Count_Institutional_Delegate__c</fullName>
    <label>Count Institutional Delegate</label>
    <summaryFilterItems>
        <field>Society_Member__c.Role__c</field>
        <operation>equals</operation>
        <value>Institutional Delegate</value>
    </summaryFilterItems>
    <summaryForeignKey>Society_Member__c.Society__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>