force-app/main/default/objects/Society__c/fields/Count_Past_President__c.field-meta.xml
<CustomField>
    <fullName>Count_Past_President__c</fullName>
    <label>Count Past President</label>
    <summaryFilterItems>
        <field>Society_Member__c.Role__c</field>
        <operation>equals</operation>
        <value>Past president</value>
    </summaryFilterItems>
    <summaryForeignKey>Society_Member__c.Society__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>