force-app/main/default/objects/Society__c/fields/ddinfo_group__c.field-meta.xml
<CustomField>
    <fullName>ddinfo_group__c</fullName>
    <label>ddinfo_group</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>