force-app/main/default/objects/Society__c/fields/humhub_space_group__c.field-meta.xml
<CustomField>
    <fullName>humhub_space_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>humhub_space_group</label>
    <type>Checkbox</type>
</CustomField>