force-app/main/default/objects/Society__c/fields/Inside_Europe__c.field-meta.xml
<CustomField>
    <fullName>Inside_Europe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inside Europe?</label>
    <type>Checkbox</type>
</CustomField>