force-app/main/default/objects/Society__c/Society__c.field-meta.xml
<CustomField>
    <fullName>Society__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Society</label>
    <referenceTo>Society__c</referenceTo>
    <relationshipLabel>Societies</relationshipLabel>
    <relationshipName>Societies</relationshipName>
    <type>Lookup</type>
</CustomField>