force-app/main/default/objects/Society__c/fields/Society_Name__c.field-meta.xml
<CustomField>
    <fullName>Society_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>