force-app/main/default/objects/Society__c/fields/street2__c.field-meta.xml
<CustomField>
    <fullName>street2__c</fullName>
    <label>street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>