force-app/main/default/objects/Society__c/fields/telephone__c.field-meta.xml
<CustomField>
    <fullName>telephone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>