force-app/main/default/objects/Society__c/fields/Type_of_partnership__c.field-meta.xml
<CustomField>
    <fullName>Type_of_partnership__c</fullName>
    <label>Type of partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Memoranda of understanding</fullName>
            </value>
            <value>
                <fullName>Agreements</fullName>
            </value>
            <value>
                <fullName>Memoranda of Understanding under preparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>