force-app/main/default/objects/Society__c/fields/zusatz1__c.field-meta.xml
<CustomField>
    <fullName>zusatz1__c</fullName>
    <label>zusatz1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>