force-app/main/default/objects/Society__c/recordTypes/Partner_Society.recordType-meta.xml
<RecordType>
    <fullName>Partner_Society</fullName>
    <active>true</active>
    <label>Partner Society</label>
</RecordType>