force-app/main/default/objects/Society__c/recordTypes/Sub_Speciality_Society.recordType-meta.xml
<RecordType>
    <fullName>Sub_Speciality_Society</fullName>
    <active>true</active>
    <label>Sub-Speciality Society</label>
</RecordType>