force-app/main/default/objects/Society__c/validationRules/Society_Role_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Society_Role_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>Count_Past_President__c &gt; 1 ||
Count_EQTF_Chairs__c &gt; 1 ||
Count_Secretary_General__c &gt; 1  || 
 Count_Institutional_Delegate__c &gt; 1</errorConditionFormula>
    <errorMessage>This role already exists.</errorMessage>
</ValidationRule>