force-app/main/default/objects/Society__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>tx_efnsusr_contact_id_group__c</columns>
    <columns>tx_efnsusr_supergroup_id_group__c</columns>
    <columns>tx_efnsusr_type_id_group__c</columns>
    <columns>Type_of_partnership__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>