force-app/main/default/objects/Society__c/listViews/National_Neurology_Societies.listView-meta.xml
<ListView>
    <fullName>National_Neurology_Societies</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tx_efnsusr_contact_id_group__c</columns>
    <columns>tx_efnsusr_supergroup_id_group__c</columns>
    <columns>tx_efnsusr_type_id_group__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Society__c.National_Neurological_Society</value>
    </filters>
    <filters>
        <field>tx_efnsusr_type_name__c</field>
        <operation>equals</operation>
        <value>Society</value>
    </filters>
    <label>National Neurology Societies</label>
</ListView>