force-app/main/default/objects/Society__c/listViews/Societies_with_Supergroup_filled.listView-meta.xml
<ListView>
    <fullName>Societies_with_Supergroup_filled</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tx_efnsusr_supergroup_id_group__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Societies with Supergroup filled</label>
</ListView>